# loadit

./: README.md  pyproject.toml
src/accesserator/: __init__.py  accesserator.py  cache_base.py  sharded_cache.py  sharded_dataset.py  simple_cache.py  writer.py
src/loadit/: __init__.py  cache_base.py  dict_cache.py  loadit.py  sharded_dataset.py  util.py  writer.py
tests/: test_iteration.py
