[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "accesserator"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Ashok Cutkosky", email = "ashok@cutkosky.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
"filelock",
"watchdog",
]

[project.urls]
Documentation = "https://github.com/unknown/accesserator#readme"
Issues = "https://github.com/unknown/accesserator/issues"
Source = "https://github.com/unknown/accesserator"

[tool.hatch.version]
path = "src/accesserator/__about__.py"
