[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loadit"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.7"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Ashok Cutkosky", email = "ashok@cutkosky.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "filelock ~= 3.12.4",
  "watchdog ~= 3.0.0",
]
[project.optional-dependencies]
dev = [
    "pytest ~=7.4.0",
    "numpy ~=1.26.0",
]

[project.urls]
Documentation = "https://github.com/acutkosky/loadit#readme"
Issues = "https://github.com/acutkosky/loadit/issues"
Source = "https://github.com/acutkosky/loadit"

[tool.hatch.version]
path = "src/loadit/__about__.py"

[tool.pytest.ini_options]
tmp_path_retention_policy = "none"
